--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 
 # Command to run tests, e.g. python setup.py test
 script:
-    - coverage run -source cellmaps_hierarchyeval setup.py test
+    - coverage run --source cellmaps_hierarchyeval setup.py test
 
 after_success: coveralls
 
