--- a/tox.ini
+++ b/tox.ini
@@ -17,5 +17,5 @@ commands = flake8 cellmaps_hierarchyeval
 setenv =
     PYTHONPATH = {toxinidir}
 
-commands = python setup.py test
+commands = pytest
 
