--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = py38, py39 flake8
+envlist = py38, py39, py310, py311, flake8
 
 [travis]
 python =
+    3.11: py311
+    3.10: py310
     3.9: py39
     3.8: py38
-
-
 
 [testenv:flake8]
 basepython = python
@@ -16,6 +16,10 @@ commands = flake8 cellmaps_hierarchyeval
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+deps =
+    -r{toxinidir}/requirements_dev.txt
 
-commands = pytest
+commands =
+     pip install -U pip
+     pytest --basetemp={envtmpdir}
 
